--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,13 @@
-default:
-  image: "${CI_TEMPLATE_REGISTRY_HOST}/pages/hugo:latest"
-
-variables:
-  GIT_SUBMODULE_STRATEGY: recursive
-  GL_PAGES_URL: infosec.ummit.dev
-  
+# The Docker image that will be used to build your app
+image: ${CI_TEMPLATE_REGISTRY_HOST}/pages/hugo:latest
 pages:
   script:
-    - hugo --minify -b $GL_PAGES_URL
+    - hugo --minify
   artifacts:
     paths:
+      # The folder that contains the files to be exposed at the Page URL
       - public
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  environment: production
+    # This ensures that only pushes to the default branch will trigger
+    # a pages deploy
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
