--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,16 @@
-# The Docker image that will be used to build your app
-image: ${CI_TEMPLATE_REGISTRY_HOST}/pages/hugo:latest
+default:
+  image: "${CI_TEMPLATE_REGISTRY_HOST}/pages/hugo:latest"
+
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+  GL_PAGES_URL: infosec.ummit.dev
+  
 pages:
   script:
-    - hugo --minify
+    - hugo --minify -b $GL_PAGES_URL
   artifacts:
     paths:
-      # The folder that contains the files to be exposed at the Page URL
       - public
   rules:
-    # This ensures that only pushes to the default branch will trigger
-    # a pages deploy
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  environment: production
