build/ci: Remove --minity options from build process

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
   
 pages:
   script:
-    - hugo --minify -b $GL_PAGES_URL
+    - hugo -b $GL_PAGES_URL
   artifacts:
     paths:
       - public
