build/ci: Update Hugo baseURL

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ default:
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
-  GL_PAGES_URL: infosec.ummit.dev
+  GL_PAGES_URL: https://infosec.ummit.dev
   
 pages:
   script:
