test: CI pipeline configuration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 default:
-  image: "registry.gitlab.com/pages/hugo/hugo:latest"
+  image: "registry.gitlab.com/pages/hugo/hugo_extended:latest"
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
