fix/config: Automatically detect baseURL for GitLab Pages (Comment only)
Configure baseURL to automatically detect the environment, addressing issues where the site only worked on custom domains.

Finally, tested 10+ commits, the reason is baseURL!

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
-#baseURL = "https://infosec.ummit.dev/"
+# Opting for Hugo to automatically detect the baseURL instead of setting it manually seems like the way to go!
+#baseURL = "https://infosec.ummit.dev/" <- No need.
 theme = "hugo-ficurinia"
 title = "InfoSec - UmmIt"
 languageCode = "en"
