--- a/hugo.toml
+++ b/hugo.toml
@@ -63,7 +63,7 @@ summaryLength = 70  # number of words for article summaries
     gridView = true  # show post list as a grid. goes well with paperCards
     bigArticleTitle = true  # makes the title in the single article view bigger
     navtype = "standard"  # changes the style of the pagination, available styles are: "standard", "circles"
-    enableShadow = false  # shows a shadow around some elements
+    enableShadow = true  # shows a shadow around some elements
     menuStyle = "standard"  # changes the style of the main site navigation menu, available styles are: "standard", "buttons"
     inputStyle = "standard" # changes the style of inputs (like the searchbar), available styles are: "standard", "buttons"
 
@@ -77,16 +77,16 @@ summaryLength = 70  # number of words for article summaries
     underlineTitleLinks = false  # show an underline also for links that are titles
 
     # enable comments support with commento using the script from your server
-    commento = "https://example.com/js/commento.js"
+    #commento = "https://example.com/js/commento.js"
 
     # enable comments support with cactus comments (cactus.chat)
-    cactusCommentsSiteName = "example.com"
-    cactusCommentsServerName = "cactus.chat"
-    cactusCommentsHomeserver = "https://matrix.cactus.chat:8448"
+    #cactusCommentsSiteName = "example.com"
+    #cactusCommentsServerName = "cactus.chat"
+    #cactusCommentsHomeserver = "https://matrix.cactus.chat:8448"
 
     # enable analytics using Plausible
-    plausibleScriptUrl = "https://something.com/..."
-    plausibleDomain = "example.com"
+    #plausibleScriptUrl = "https://something.com/..."
+    #plausibleDomain = "example.com"
 
     # enable analytics using Umami
     umamiScriptUrl = "https://cloud.umami.is/script.js"
